data/derived/fa15/progs/unify/prog0342.ml.out
Characters 105-109:
  | head :: tail -> ((listReverse [tail]) :: [head]);;
                                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
